2021-01-15  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use TRIE_CHAR_TERM in TAIL I/O methods.

	* datrie/tail.c (tail_fwrite):
	  - Replace strlen() with trie_char_strlen() on suffix,
	    which is TrieChar string.
	* datrie/tail.c (tail_fread):
	  - Append TRIE_CHAR_TERM, rather than literal zero,
	    as suffix terminator.

2021-01-15  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use TRIE_CHAR_TERM in TrieIterator methods.

	* datrie/trie.c (trie_iterator_get_key):
	  - Replace strlen() with trie_char_strlen() on tail_str,
	    which is TrieChar string.
	  - Check tail_str termination against TRIE_CHAR_TERM, not zero.

2021-01-14  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix wrong TRIE_CHAR_TERM semantics.

	* datrie/trie.h (trie_state_is_terminal):
	  - Test for terminal state using zero AlphaChar.
	    TRIE_CHAR_TERM is a TrieChar, although it's also accidentally zero.

2021-01-14  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Reduce loops in alpha_map_recalc_work_area().

	* datrie/alpha-map.c (alpha_map_recalc_work_area):
	  - Instead of pre-filling trie-to-alpha map with errors
	    and setting valid cells afterward, just fill error cells
	    left after valid cells are done. Then, finally set
	    TRIE_CHAR_TERM cell.

2021-01-10  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Rewrite AlphaMap recalc.

	* datrie/alpha-map.c (alpha_map_recalc_work_area):
	  Rewrite alpha-to-trie & trie-to-alpha maps recalculation
	  - For clearer relation between the two maps
	  - To allow other TRIE_CHAR_TERM values than zero

2021-01-09  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use TRIE_CHAR_TERM macro instead of zero.

	* datrie/alpha-map.c
	  (alpha_map_char_to_trie, alpha_map_char_to_trie_str):
	* datrie/trie.c (trie_branch_in_branch, trie_branch_in_tail):
	* datrie/tail.c (tail_walk_str, tail_walk_char):
	  - Use TRIE_CHAR_TERM instead of hard-wired zero when working
	    with raw trie string termination.